Elimination of PlayerController.java + Refactor of Controller and GameController